--- a/dragonstack/backend/package.json
+++ b/dragonstack/backend/package.json
@@ -4,9 +4,27 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
-    "start": "node ./bin/server",
-    "dev": "nodemon ./bin/server"
+    "start": "../dragonstack/backend/node_modules/.bin/node ./bin/server",
+    "dev": "../dragonstack/backend/node_modules/.bin/nodemon ./bin/server",
+    "configure-dev": "npm run configure && npm run dev",
+    "configure": "./bin/configure_db.sh"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.20",
+    "parcel": "^2.8.2"
+  },
+  "dependencies": {
+    "base-64": "^1.0.0",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "express": "^4.18.2",
+    "node": "^19.3.0",
+    "pg": "^8.8.0",
+    "save": "^2.9.0",
+    "uuid": "^9.0.0"
+  }
 }
