--- a/dragonstack/backend/package.json
+++ b/dragonstack/backend/package.json
@@ -24,6 +24,8 @@
     "express": "^4.18.2",
     "node": "^19.3.0",
     "pg": "^8.8.0",
+    "pg-pool": "^3.5.2",
+    "postgres-pool": "^6.0.8",
     "save": "^2.9.0",
     "uuid": "^9.0.0"
   }
