--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -8,9 +8,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "parcel": "^2.8.3",
     "parcel-transformer-babel-set-preset-env-target": "^2.0.0-alpha.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0"
   },
   "description": "",
@@ -20,4 +22,3 @@
     "process": "^0.11.10"
   }
 }
-
