--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "sass": "^1.58.0"
   },
   "description": "",
