--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -16,12 +16,14 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.58.0"
   },
   "description": "",
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "process": "^0.11.10"
   }
 }
