--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "bootstrap": "^5.2.3",
     "parcel": "^2.8.3",
     "parcel-transformer-babel-set-preset-env-target": "^2.0.0-alpha.3.3",
@@ -24,6 +25,7 @@
     "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
