--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "nodemon": "^2.0.20",
-    "parcel": "^2.8.2"
+    "parcel": "^2.8.2",
+    "redux-devtools-extension": "^2.13.9"
   },
   "dependencies": {
     "express": "^4.18.2",
