--- a/dragonstack/backend/package.json
+++ b/dragonstack/backend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
+    "nanoid": "^4.0.1",
     "node": "^19.3.0",
     "pg": "^8.8.0",
     "pg-pool": "^3.5.2",
