--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
+    "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.0"
