--- a/dragonstack/frontend/.babelrc
+++ b/dragonstack/frontend/.babelrc
@@ -1,4 +1,4 @@
 {
 
-  "plugins": ["@babel/plugin-proposal-class-properties", "transform-object-rest-spread"]
+  "plugins": ["@babel/plugin-proposal-class-properties","@babel/plugin-proposal-object-rest-spread"]
 }
