--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -10,14 +10,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "bootstrap": "^5.2.3",
-    "history": "^5.3.0",
     "parcel": "^2.8.3",
     "parcel-transformer-babel-set-preset-env-target": "^2.0.0-alpha.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
@@ -27,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "process": "^0.11.10",
     "redux-devtools-extension": "^2.13.9"
