--- a/dragonstack/backend/package.json
+++ b/dragonstack/backend/package.json
@@ -28,6 +28,7 @@
     "pg-pool": "^3.5.2",
     "postgres-pool": "^6.0.8",
     "save": "^2.9.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
