--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -25,8 +25,10 @@
   },
   "description": "",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
+    "@babel/core": "^7.21.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "process": "^0.11.10",
     "redux-devtools-extension": "^2.13.9"
