--- a/dragonstack/package.json
+++ b/dragonstack/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dragonstack",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "start": "nf start",
     "backend": "nodemon backend/bin/server",
@@ -13,5 +12,9 @@
   "description": "",
   "devDependencies": {
     "parcel": "^2.10.3"
+  },
+  "dependencies": {
+    "@parcel/config-default": "^2.10.3",
+    "@parcel/core": "^2.10.3"
   }
 }
