--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -8,22 +8,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
+    "@reduxjs/toolkit": "^2.0.1",
     "bootstrap": "^5.3.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
-    "react-router": "^6.20.0",
-    "react-router-dom": "^5.3.4",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
+    "react-redux": "^9.0.2",
+    "react-router": "^6.20.1",
+    "react-router-dom": "~6.20.1",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.69.5"
   },
   "description": "",
   "devDependencies": {
-    "@babel/core": "^7.23.3",
+    "@babel/core": "^7.23.5",
     "parcel": "^2.10.3",
     "process": "^0.11.10",
     "redux-devtools-extension": "^2.13.9"
