--- a/dragonstack/frontend/package.json
+++ b/dragonstack/frontend/package.json
@@ -15,10 +15,8 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.2",
-    "react-router": "^6.20.1",
-    "react-router-dom": "~6.20.1",
-    "redux": "^5.0.0",
-    "redux-thunk": "^3.1.0",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
     "sass": "^1.69.5"
   },
   "description": "",
