--- a/dragonstack/package.json
+++ b/dragonstack/package.json
@@ -9,12 +9,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "parcel": "^2.10.3"
   },
   "dependencies": {
+    "@parcel/babel-plugin-transform-runtime": "^2.10.3",
     "@parcel/config-default": "^2.10.3",
-    "@parcel/core": "^2.10.3"
-  }
+    "@parcel/core": "^2.10.3",
+    "@parcel/reporter-dev-server": "^2.10.3",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2"
+  },
+  "main": "index.js",
+  "description": ""
 }
