--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "redux-devtools-extension": "^2.13.9"
   },
   "dependencies": {
+    "@parcel/babel-plugin-transform-runtime": "^2.10.3",
     "express": "^4.18.2",
     "nanoid": "^4.0.1",
     "pg": "^8.8.0"
