--- a/dragonstack/package.json
+++ b/dragonstack/package.json
@@ -13,7 +13,7 @@
     "parcel": "^2.10.3"
   },
   "dependencies": {
-    "@parcel/babel-plugin-transform-runtime": "^2.10.3",
+    "@parcel/babel-plugin-transform-runtime":"^2.10.3",
     "@parcel/config-default": "^2.10.3",
     "@parcel/core": "^2.10.3",
     "@parcel/reporter-dev-server": "^2.10.3",
@@ -21,5 +21,6 @@
     "bootstrap": "^5.3.2"
   },
   "main": "index.js",
+  "module": "dist/module.js",
   "description": ""
 }
